<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="gone"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/select_you_position_radius"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical">

        <Button
            android:layout_width="300dp"
            android:id="@+id/exactRadius"
            android:text="@string/exact_radius"
            android:textColor="#fff"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="@drawable/genaral_round_button"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="300dp"
            android:id="@+id/fewRadius"
            android:text="@string/few_board_radius"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="@drawable/genaral_round_button"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="300dp"
            android:id="@+id/areaRadius"
            android:text="@string/area_basis_radius"
            android:textColor="#fff"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="@drawable/genaral_round_button"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="300dp"
            android:id="@+id/cityRadius"
            android:text="@string/city_basis_radius"
            android:textColor="#fff"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="5dp"
            android:background="@drawable/genaral_round_button"
            android:textAllCaps="false"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>